--- a/dmu4/dmu4_sm_ELAIS-S1/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_ELAIS-S1/generate_holes.ipynb
@@ -342,9 +342,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:herschelhelp_internal]",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
-   "name": "conda-env-herschelhelp_internal-py"
+   "name": "helpint"
   },
   "language_info": {
    "codemirror_mode": {
@@ -356,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
