--- a/dmu4/dmu4_sm_xFLS/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_xFLS/generate_holes.ipynb
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This notebook was run with herschelhelp_internal version: \n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n"
+     ]
+    }
+   ],
    "source": [
     "from herschelhelp_internal import git_version\n",
     "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +56,7 @@
    "source": [
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
     "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
-    "SUFFIX = SUFFIX + '_WARNING-MADE-WITH-Lockman-SWIRE-PARAMS'\n",
+    "SUFFIX = SUFFIX #+ '_WARNING-MADE-WITH-Lockman-SWIRE-PARAMS'\n",
     "\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -112,15 +121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 39625 GAIA stars in xFLS\n",
+      "Starmask written to data/10_arcsec_holes_xFLS.reg\n"
+     ]
+    }
+   ],
    "source": [
     "starmask.create_holes('../../dmu0/dmu0_GAIA/data/GAIA_{}.fits'.format(field),\n",
     "                      'data/10_arcsec_holes_{}.reg'.format(field),\n",
     "                      '../../dmu2/dmu2_field_coverages/{}_MOC.fits'.format(field))\n",
+    "\n",
     "    \n"
    ]
   },
@@ -133,9 +152,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "\n",
+      "WCSAXES =                    2 / Number of coordinate axes\n",
+      "CRPIX1  =            [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "     0.5 / Pixel coordinate of reference point\n",
+      "CRPIX2  =                0.5 / Pi [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "xel coordinate of reference point\n",
+      "CDELT1  =                0.675 / [deg] Coordin [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ate increment at reference point\n",
+      "CDELT2  =                0.675 / [deg] Coordina [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "te increment at reference point\n",
+      "RADECSYSa= 'ICRS    '           / International  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "Celestial Ref. System\n",
+      "CUNIT1  = 'deg     '                / Units of coordinate  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "increment and value\n",
+      "CUNIT2  = 'deg     '                / Units of coordinate in [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "crement and value\n",
+      "CTYPE1  = 'RA---TAN'           / \n",
+      "CTYPE2  = 'DEC--TAN'         [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "   / \n",
+      "CRVAL1  =                  261.387059958 / [deg] Coordinate value at refer [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ence point\n",
+      "CRVAL2  =                  58.0184602211 / [deg] Coordinate value at  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "reference point\n",
+      "LONPOLE =                  0.0 / [deg] Native longitude of celes [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "tial pole\n",
+      "LATPOLE = 90.0 / [deg] Native latitude of celestial pole\n",
+      "              [astropy.io.fits.card]\n",
+      "WARNING: FITSFixedWarning:  0.5 / Pixel coordinate of reference point\n",
+      "a floating-point value was expected. [astropy.wcs.wcs]\n",
+      "WARNING: FITSFixedWarning:  / \n",
+      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n"
+     ]
+    }
+   ],
    "source": [
     "ORDER=16\n",
     "starmask.reg2moc('data/10_arcsec_holes_{}.reg'.format(field),\n",
@@ -156,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -166,12 +235,14 @@
     "\n",
     "per_catalogue_params = [\n",
     "#     Field       Band        A         B            magnitude limit\n",
-    "    [field, 'megacam_r',      2.30374,  -0.0962746,  18], # Using 18 as faint limit.\n",
-    "    [field, 'gpc1_r',         2.46029,  -0.111433,   18], # Using 18 as faint limit. \n",
-    "    [field, 'irac1',          2.56501,  -0.100879,   18], # Using 18 as faint limit.\n",
-    "    [field, 'ukidss_k',       3.67944,  -0.173850,   18], # Using 18 as faint limit.\n",
-    "    [field, 'wfc_r',          3.43951,  -0.173789,   18]  # Using 18 as faint limit.\n",
+    "#    [field, 'megacam_r',      2.30374,  -0.0962746,  16], # Using 18 as faint limit.\n",
+    "#    [field, 'gpc1_r',         2.46029,  -0.111433,   16], # Using 18 as faint limit. \n",
+    "    [field, 'irac_i1',          3.01003,   -0.132068,   16], # Using 18 as faint limit.\n",
+    "#    [field, 'ukidss_k',       3.67944,  -0.173850,   16], # Using 18 as faint limit.\n",
+    "#    [field, 'wfc_r',          3.43951,  -0.173789,   16]  # Using 18 as faint limit.\n",
     "]   \n",
+    "\n",
+    "  \n",
     "\n",
     "#We previously took a moc of the survey to only make holes on that area, which \n",
     "#was a mistake as it led to missing holes for the XID+ run\n"
@@ -179,9 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 39625 GAIA stars in xFLS\n",
+      "Starmask written to data/holes_xFLS_irac_i1_20190114.reg\n"
+     ]
+    }
+   ],
    "source": [
     "for pristine_cat in per_catalogue_params:\n",
     "    starmask.create_holes('../../dmu0/dmu0_GAIA/data/GAIA_' + pristine_cat[0] + '.fits',    #GAIA catalogue\n",
@@ -200,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,18 +288,25 @@
     "for pristine_cat in per_catalogue_params:\n",
     "    starmask.reg2moc('data/holes_' + field + '_' + pristine_cat[1] + SUFFIX + '.reg',\n",
     "            '../../dmu2/dmu2_field_coverages/' + field + '_MOC.fits',\n",
-    "            'data/holes_' + field + '_' + pristine_cat[1] + '_O' + str(ORDER) + SUFFIX + '.fits',\n",
+    "            'data/holes_' + field + '_' + pristine_cat[1] + '_O' + str(ORDER) + SUFFIX + '_MOC.fits',\n",
     "            ra_typ=fields[field][0],\n",
     "            dec_typ=fields[field][1],\n",
     "            order=ORDER)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:herschelhelp_internal]",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
-   "name": "conda-env-herschelhelp_internal-py"
+   "name": "helpint"
   },
   "language_info": {
    "codemirror_mode": {
@@ -231,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
