XID+SPIRE_XMM-LSS

--- a/dmu26/dmu26_XID+SPIRE_XMM-LSS/XID+SPIRE_prior_SPUDS.ipynb
+++ b/dmu26/dmu26_XID+SPIRE_XMM-LSS/XID+SPIRE_prior_SPUDS.ipynb
@@ -54,9 +54,9 @@
    "source": [
     "Sel_func=pymoc.MOC()\n",
     "Sel_func.read('../../dmu4/dmu4_sm_XMM-LSS/data/holes_XMM-LSS_irac1_O16_20180420_MOC.fits')\n",
-    "SPUDS_MOC=pymoc.MOC()\n",
-    "SPUDS_MOC.read('../../dmu0/dmu0_SpUDS/data/dmu0_SpUDS_MOC.fits')\n",
-    "Final=Sel_func.intersection(SPUDS_MOC)\n"
+    "#SPUDS_MOC=pymoc.MOC()\n",
+    "#SPUDS_MOC.read('../../dmu17/dmu17_HELP_Legacy_Maps/XMM-LSS/data/mips_mosaic_MOC.fits')\n",
+    "#Final=Sel_func.intersection(SPUDS_MOC)\n"
    ]
   },
   {
@@ -84,7 +84,7 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table140523988612264\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140584561642688\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>help_id</th><th>RA</th><th>Dec</th><th>F_MIPS_24</th><th>FErr_MIPS_24_u</th><th>FErr_MIPS_24_l</th><th>Bkg_MIPS_24</th><th>Sig_conf_MIPS_24</th><th>Rhat_MIPS_24</th><th>n_eff_MIPS_24</th><th>Pval_res_24</th><th>flag_mips_24</th></tr></thead>\n",
        "<thead><tr><th></th><th>degrees</th><th>degrees</th><th>muJy</th><th>muJy</th><th>muJy</th><th>MJy / sr</th><th>MJy / sr</th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th></tr></thead>\n",
@@ -292,28 +292,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#---prior250--------\n",
-    "prior250=xidplus.prior(im250,nim250,im250phdu,im250hdu, moc=Final)#Initialise with map, uncertianty map, wcs info and primary header\n",
-    "prior250.prior_cat(XID_MIPS['RA'][good],XID_MIPS['Dec'][good],'dmu26_XID+MIPS_XMM-LSS_SPUDS.fits',ID=XID_MIPS['help_id'][good])#Set input catalogue\n",
+    "prior250=xidplus.prior(im250,nim250,im250phdu,im250hdu, moc=Sel_func)#Initialise with map, uncertianty map, wcs info and primary header\n",
+    "prior250.prior_cat(XID_MIPS['RA'][good],XID_MIPS['Dec'][good],'dmu26_XID+MIPS_XMM-LSS_SPUDS_cat_20181210.fits',ID=XID_MIPS['help_id'][good])#Set input catalogue\n",
     "prior250.prior_bkg(-5.0,5)#Set prior on background (assumes Gaussian pdf with mu and sigma)\n",
     "#---prior350--------\n",
-    "prior350=xidplus.prior(im350,nim350,im350phdu,im350hdu, moc=Final)\n",
-    "prior350.prior_cat(XID_MIPS['RA'][good],XID_MIPS['Dec'][good],'dmu26_XID+MIPS_XMM-LSS_SPUDS.fits',ID=XID_MIPS['help_id'][good])\n",
+    "prior350=xidplus.prior(im350,nim350,im350phdu,im350hdu, moc=Sel_func)\n",
+    "prior350.prior_cat(XID_MIPS['RA'][good],XID_MIPS['Dec'][good],'dmu26_XID+MIPS_XMM-LSS_SPUDS_cat_20181210.fits',ID=XID_MIPS['help_id'][good])\n",
     "prior350.prior_bkg(-5.0,5)\n",
     "\n",
     "#---prior500--------\n",
-    "prior500=xidplus.prior(im500,nim500,im500phdu,im500hdu, moc=Final)\n",
-    "prior500.prior_cat(XID_MIPS['RA'][good],XID_MIPS['Dec'][good],'dmu26_XID+MIPS_XMM-LSS_SPUDS.fits',ID=XID_MIPS['help_id'][good])\n",
+    "prior500=xidplus.prior(im500,nim500,im500phdu,im500hdu, moc=Sel_func)\n",
+    "prior500.prior_cat(XID_MIPS['RA'][good],XID_MIPS['Dec'][good],'dmu26_XID+MIPS_XMM-LSS_SPUDS_cat_20181210.fits',ID=XID_MIPS['help_id'][good])\n",
     "prior500.prior_bkg(-5.0,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -345,14 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----- There are 75 tiles required for input catalogue and 4 large tiles\n"
+      "----- There are 130 tiles required for input catalogue and 6 large tiles\n"
      ]
     },
     {
@@ -375,10 +375,10 @@
     "tiles_large=moc_routines.get_HEALPix_pixels(order_large,prior250.sra,prior250.sdec,unique=True)\n",
     "print('----- There are '+str(len(tiles))+' tiles required for input catalogue and '+str(len(tiles_large))+' large tiles')\n",
     "output_folder='./data/'\n",
-    "outfile=output_folder+'Master_prior.pkl'\n",
+    "outfile=output_folder+'Master_prior_SPUDS.pkl'\n",
     "with open(outfile, 'wb') as f:\n",
     "    pickle.dump({'priors':[prior250,prior350,prior500],'tiles':tiles,'order':order,'version':xidplus.io.git_version()},f)\n",
-    "outfile=output_folder+'Tiles.pkl'\n",
+    "outfile=output_folder+'Tiles_SPUDS.pkl'\n",
     "with open(outfile, 'wb') as f:\n",
     "    pickle.dump({'tiles':tiles,'order':order,'tiles_large':tiles_large,'order_large':order_large,'version':xidplus.io.git_version()},f)\n",
     "raise SystemExit()"
