--- a/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
@@ -19,7 +19,7 @@
     "import os\n",
     "os.environ['LOG_LEVEL'] = 'INFO'\n",
     "import glob\n",
-    "from astropy.table import Table\n",
+    "from astropy.table import Table, vstack\n",
     "\n",
     "from herschelhelp.filters import correct_galactic_extinction\n",
     "from herschelhelp.external import convert_table_for_cigale"
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = '20180221'\n",
+    "SUFFIX = '20190207'\n",
     "file_list = glob.glob('../../dmu32/dmu32_XMM-LSS/data/tiles/xmm-lss_{}_cigale_*.fits'.format(SUFFIX))"
    ]
   },
@@ -68,12 +68,16 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "def main_help_sample(master_catalogue)\n",
+    "    good = {}\n",
+    "    for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "        good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                       ~master_catalogue['flag_{}'.format(band)])\n",
+    "        good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                                  master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)\n",
+    "    combined_good = np.sum(list(good.values()), axis=0) >= 2\n",
+    "    print(\"Number of good sources: {}\".format(np.sum(combined_good)))\n",
+    "    return master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -2069,19 +2073,19 @@
     }
    ],
    "source": [
+    "cigale_input = Table()\n",
+    "\n",
     "for tile in file_list:\n",
-    "        \n",
-    "    file_num = tile.split('_')[4].split('.')[0]\n",
-    "    best_catalogue = Table.read(tile)\n",
-    "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
-    "          | (best_catalogue['flag_optnir_det'] == 7))\n",
     "    \n",
-    "    best_catalogue = best_catalogue[optnir]\n",
+    "    file_num = tile.split('_')[4].split('.')[0]\n",
+    "    print(\"Tile {}:\".format(tile.split('/')[-1]))\n",
+    "    best_catalogue = Table.read(tile)\n",
+    "    best_catalogue = main_help_sample(best_catalogue)\n",
     "\n",
     "\n",
     "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
     "\n",
-    "    print(\"Number of sources with z-spec in file {}: {}\".format(file_num, len(best_catalogue)))\n",
+    "    print(\"Number of sources with redshift in file {}: {}\".format(file_num, len(best_catalogue)))\n",
     "\n",
     "    # Correction for galactic extinction\n",
     "    best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
@@ -2100,7 +2104,11 @@
     "    remove_unneeded_fluxes(h_bands)\n",
     "    remove_unneeded_fluxes(k_bands)\n",
     "\n",
-    "    best_catalogue.write(\"data_tmp/tiles/XMM-LSS_cigale_optnir_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+    "    cigale_input = vstack(cigale_input, best_catalogue)\n",
+    "    #best_catalogue.write(\"data_tmp/tiles/XMM-LSS_cigale_best_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
+    "    \n",
+    "    \n",
+    "cigale_input.write(\"data_tmp/XMM-LSS_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -2120,7 +2128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
