--- a/dmu26/dmu26_XID+SPIRE_GAMA-09/XID+SPIRE_prior.ipynb
+++ b/dmu26/dmu26_XID+SPIRE_GAMA-09/XID+SPIRE_prior.ipynb
@@ -80,7 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "cigale['id'].name = 'help_id'\n"
+    "cigale['id'].name = 'help_id'"
    ]
   },
   {
@@ -494,7 +494,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -508,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
