--- a/dmu26/dmu26_XID+SPIRE_GAMA-12/XID+SPIRE_prior.ipynb
+++ b/dmu26/dmu26_XID+SPIRE_GAMA-12/XID+SPIRE_prior.ipynb
@@ -582,7 +582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -596,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
