New COSMOS input

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -183,7 +183,8 @@
    },
    "outputs": [],
    "source": [
-    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "combined_good = np.sum(list(good.values()), axis=0) >= 2\n",
+    "all_xid =  np.sum(list(good.values()), axis=0) >= 0"
    ]
   },
   {
@@ -377,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[good].copy()"
+    "best_catalogue = master_catalogue[all_xid].copy()"
    ]
   },
   {
